--- a/front/src/HarryStyles/Intercambios.css
+++ b/front/src/HarryStyles/Intercambios.css
@@ -98,7 +98,7 @@
 }
 
 .publicacion {
-  width: 200px; /* Tamaño fijo para las publicaciones */
+  width: 250px; /* Tamaño fijo para las publicaciones */
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
@@ -108,12 +108,17 @@
   align-items: center; /* Centra el contenido horizontalmente */
 }
 
-.publicacion img {
-  width: 100%; /* Tamaño fijo para las imágenes */
-  height: 200px; /* Tamaño fijo para las imágenes */
-  margin-bottom: 10px;
-  border-radius: 5px;
-  object-fit: cover; /* Ajusta el tamaño de la imagen para cubrir el contenedor */
+.publicacion-img {
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+  text-align: center; /* Centro de la imagen en el contenedor */
+}
+
+.publicacion-img .img {
+  max-width: 100%;
+  height: 200px;
+  object-fit:cover;
 }
 
 .detalles {
