--- a/front/src/HarryStyles/NavBar.css
+++ b/front/src/HarryStyles/NavBar.css
@@ -124,4 +124,17 @@
   .showNoti {
       display: block;
   }
+  
+  .saludoUsuario {
+    font-size: 1.2em;
+    color: #8b0000;
+    font-weight: bold;
+    text-align: center;
+    margin: 10px 0;
+    padding: 5px;
+    background-color: #f0f8ff; /* Color de fondo */
+    border-radius: 8px; /* Bordes redondeados */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra */
+}
+
 
