--- a/front/src/HarryStyles/Publicaciones.css
+++ b/front/src/HarryStyles/Publicaciones.css
@@ -137,3 +137,30 @@
   width: 100%;
   height: 400px; /* Ajusta la altura según sea necesario */
 }
+
+.botonEstado {
+  padding: 10px 15px;
+  font-size: 14px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.botonAlta {
+  color: #fff;
+  background-color: #28a745; /* Verde */
+}
+
+.botonAlta:hover {
+  background-color: #218838;
+}
+
+.botonBaja {
+  color: #fff;
+  background-color: #dc3545; /* Rojo */
+}
+
+.botonBaja:hover {
+  background-color: #c82333;
+}
