--- a/front/src/HarryStyles/Notificaciones.css
+++ b/front/src/HarryStyles/Notificaciones.css
@@ -75,4 +75,7 @@
     background-color: #45a049; /* Color de fondo al pasar el ratón */
 }
 
-
+.botonCampanita{
+    padding: 0px;
+    stroke-width: 1.2;
+}
