--- a/front/src/HarryStyles/Usuarios.css
+++ b/front/src/HarryStyles/Usuarios.css
@@ -21,4 +21,19 @@
         padding: 5px 10px;
         cursor: pointer;
       }
+.linkUsuario{
+  text-decoration: none;
+  color: black;
+}
+.botonEstado {
+  padding: 10px 15px;
+  gap: 15px;
+  font-size: 15px;
+  height: 75%;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  gap: 15px;
+}
       
