--- a/front/src/HarryStyles/Intercambios.css
+++ b/front/src/HarryStyles/Intercambios.css
@@ -95,28 +95,13 @@
   flex-grow: 1; /* Asegura que las publicaciones ocupen el espacio disponible */
 }
 
-.publicacion {
+.publicacioninter {
   width: 250px; /* Tamaño fijo para las publicaciones */
-  padding: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
+  border-radius: 0px;
   background-color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center; /* Centra el contenido horizontalmente */
-}
-
-.publicacion-img {
-  width: 100%;
-  height: auto;
-  overflow: hidden;
-  text-align: center; /* Centro de la imagen en el contenedor */
-}
-
-.publicacion-img .img {
-  max-width: 100%;
-  height: 200px;
-  object-fit:cover;
 }
 
 .detalles {
